--- a/book-platform/src/components/MainPage/mainPage.css
+++ b/book-platform/src/components/MainPage/mainPage.css
@@ -6,10 +6,28 @@
     border-radius: 15px 15px 24px 24px;
 }
 
+.slider {
+    max-width: 1112px;
+    display: flex;
+    align-items: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    
+}
+
+.slider::-webkit-scrollbar { width: 0; }
+
 .books-block {
     display: flex;
-    margin-left: 50px;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 50px; */
 }
+
+/* .book-cover {
+    width: 170px;
+} */
 
 h3 {
     margin-left: 50px;
@@ -28,22 +46,64 @@ h3 {
 .title {
     font: 600 16px/16px "Source Sans Pro", sans-serif;
     margin-top: 0;
+    height: 30px;
+    margin-bottom: 0;
 }
 
 .author {
     font: 14px/17px "Source Sans Pro", sans-serif;
     margin-bottom: 5px;
+    margin-top: 6px;
 }
 
 .genre {
     margin-top: 5px;
 }
 
-.state {
+/* .state {
     border-radius: 16px;
     border: 1px solid #123884;
     background-color: #123884;
     height: 32px;
     width: 100%;
     color: white;
+} */
+
+.css-13cymwt-control {
+    border-radius: 16px;
+    border: 1px solid #123884;
+    background-color: #123884;
+    height: 32px;
+    width: 100%;
+    color: white;
+}
+
+.arrow {
+    width: 30px;
+    height: 50px;
+    margin-right: 16px;
+    margin-left: 16px;
+}
+
+.star {
+    width: 24px;
+    height: 23px;
+
+}
+
+.not-read {
+    border-radius: 16px;
+    border: 1px solid #123884;
+    background-color: #123884;
+    height: 32px;
+    width: 100%;
+    color: white;
+}
+.read {
+    border-radius: 16px;
+    border: 2px solid #123884;
+    background-color: white;
+    height: 32px;
+    width: 100%;
+    color: black;
 }
