--- a/book-platform/src/components/Header/header.css
+++ b/book-platform/src/components/Header/header.css
@@ -1,8 +1,23 @@
-.header {
+.menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    height: 50px;
+    align-items: center;
+    background-color: #123884;
+    color: white;
+}
+
+.main-logo {
+    display: flex;
+    justify-content: center;
     height: 100px;
     align-items: center;
+}
+.header {
+    width: 100px;
+    height: 30px;
+    text-align: center;
+    cursor: pointer;
 }
 
 .logo {
