--- a/book-platform/src/components/Header/header.css
+++ b/book-platform/src/components/Header/header.css
@@ -7,6 +7,11 @@
     color: white;
 }
 
+.link {
+    text-decoration: none;
+    color: white;
+}
+
 .main-logo {
     display: flex;
     justify-content: center;
