--- a/book-platform/src/components/Genres/genres.css
+++ b/book-platform/src/components/Genres/genres.css
@@ -4,6 +4,7 @@
     background-color: #123884;
     color: white;
     padding: 50px;
+    position: fixed;
 }
 
 .all-genres {
@@ -15,16 +16,98 @@
     cursor: pointer;
 }
 
-h2 {
-    margin-bottom: 60px;
-    border-bottom: 2px solid white;
-    height: 50px;
+.santa-genres {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.h2 {
+  margin-bottom: 60px;
+  border-bottom: 2px solid white;
+  height: 50px;
+  width: 30vw;
+  cursor: pointer;
 }
 
 .genres-books {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 50px 80px;
-    max-width: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 50px 120px;
 }
+
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+  }
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: #123884;
+  }
+  
+  /* Color/shape of burger icon bars on hover*/
+  .bm-burger-bars-hover {
+    background: white;
+    border: 1px solid #123884;
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: white;
+  }
+  
+  /*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+  .bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    background: #123884;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+    overflow: hidden !important;
+  }
+  
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #123884;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: white;
+    padding: 0.8em;
+    
+  }
+  
+  /* Individual item */
+  .bm-item {
+    display: inline-block;
+  }
+  
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+    
+  }
