--- a/book-platform/src/components/Genres/genres.css
+++ b/book-platform/src/components/Genres/genres.css
@@ -77,8 +77,8 @@
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
   .bm-menu-wrap {
-    position: fixed;
-    height: 100%;
+    position: fixed !important;
+    height: 100% !important;
   }
   
   /* General sidebar styles */
@@ -111,3 +111,10 @@
     background: rgba(0, 0, 0, 0.3);
     
   }
+
+  @media screen and (max-width:700px) {
+
+    .bm-menu-wrap {
+      width: 90% !important;
+    }
+}
