--- a/book-platform/src/components/FavoritesPage/favoritesPage.css
+++ b/book-platform/src/components/FavoritesPage/favoritesPage.css
@@ -1,6 +1,6 @@
 .read-books {
-    margin: 50px 0;
-    max-width: 800px;
+    margin: 50px 30px;
+    max-width: 600px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -66,7 +66,7 @@
     display: flex;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:900px) {
 
     .read-books {
         background-color: rgba(255, 255, 255, 0.6);
